continued work on the updater button

--- a/addons/godotmon/plugin.cfg
+++ b/addons/godotmon/plugin.cfg
@@ -3,5 +3,5 @@
 name="godotmon"
 description="A collection of editors used to work on the databases of your game."
 author="Godotmon Team"
-version="0.1.0.updater test"
+version="0.0.9"
 script="godotmon.gd"
